--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html lang="en" data-theme="light" >
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,12 +8,15 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <title>AI Universe</title>
 </head>
-<body>
-    <header>
-
+<body class="overflow-x-hidden">
+    <header class="my-7 text-center">
+<h1 class="text-5xl my-12 font-semibold text-center ">AI Universe Hub</h1>
+<button class="p-6  rounded-md font-semibold text-xl text-white  bg-red-400">Sort By Date</button>
     </header>
-    <main>
-
+    <main class="container mx-auto mt-12">
+<section id="cards-container" class="grid items-center justify-center grid-cols-1 lg:grid-cols-3 gap-5">
+    
+</section>
     </main>
   <script src="./js/main.js"></script>
 </body>
