--- a/index.html
+++ b/index.html
@@ -1,24 +1,87 @@
 <!DOCTYPE html>
-<html lang="en" data-theme="light" >
+<html lang="en" data-theme="light">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/daisyui@2.51.3/dist/full.css" rel="stylesheet" type="text/css" />
     <script src="https://cdn.tailwindcss.com"></script>
     <title>AI Universe</title>
 </head>
-<body class="overflow-x-hidden">
+
+<body style="font-family: 'Work Sans', sans-serif;" class="overflow-x-hidden">
     <header class="my-7 text-center">
-<h1 class="text-5xl my-12 font-semibold text-center ">AI Universe Hub</h1>
-<button class="p-6  rounded-md font-semibold text-xl text-white  bg-red-400">Sort By Date</button>
+        <h1 class="text-5xl my-12 font-semibold text-center ">AI Universe Hub</h1>
+        <button class="p-6  rounded-md font-semibold text-xl text-white  bg-red-400">Sort By Date</button>
     </header>
     <main class="container mx-auto mt-12">
-<section id="cards-container" class="grid items-center justify-center grid-cols-1 lg:grid-cols-3 gap-5">
-    
-</section>
+        <section id="cards-container" class="grid items-center justify-center grid-cols-1 lg:grid-cols-3 gap-5">
+         
+        </section>
+        <!-- Show More Button section -->
+        <section class="text-center">
+          <button id="moreButton" class="p-3 mt-5 rounded-md font-semibold text-xl text-white  bg-red-400">Show More</button>
+        </section>
+
+        <!-- Modal Section  -->
+        <section>
+            <input type="checkbox" id="my-modal-3" class="modal-toggle" />
+            <div class="modal">
+                <div class="modal-middle w-9/12">
+                    <label for="my-modal-3" class="btn btn-sm btn-circle absolute right-2 top-2">✕</label>
+                   <div id="modalContainer" class="flex justify-between items-center gap-2 bg-slate-400">
+                    <div class="card w-full bg-base-100 shadow-xl">
+                        <figure><img id="detailsImage" src="" alt="Shoes" /></figure>
+                        <div class="card-body">
+                          <h2 id="detailsTitle" class="card-title">
+                            Shoes!
+                            <div class="badge badge-secondary">NEW</div>
+                          </h2>
+                          <p>If a dog chews shoes whose shoes does he choose?</p>
+                          <div class="card-actions justify-end">
+                            <div class="badge badge-outline">Fashion</div> 
+                            <div class="badge badge-outline">Products</div>
+                          </div>
+                        </div>
+                      </div>
+                    <div class="card w-full bg-red-100 shadow-xl">
+                        <figure><img id="detailsImage" src="" alt="Shoes" /></figure>
+                        <div class="card-body">
+                          <h2 id="detailsTitle" class="card-title">
+                            Shoes!
+                            <div class="badge badge-secondary">NEW</div>
+                          </h2>
+                          <p>If a dog chews shoes whose shoes does he choose?</p>
+                          <div class="card-actions justify-end">
+                            <div class="badge badge-outline">Fashion</div> 
+                            <div class="badge badge-outline">Products</div>
+                          </div>
+                        </div>
+                      </div>
+                   </div>
+                </div>
+            </div>
+        </section>
+        <!-- Spinner Section  -->
+        <section id="loadingSpinner" class="text-center text-9xl hidden">
+          <div class="flex items-center justify-center">
+            <div
+              class="inline-block h-16 w-16 animate-spin rounded-full border-4 border-solid border-current border-r-transparent align-[-0.125em] motion-reduce:animate-[spin_1.5s_linear_infinite]"
+              role="status">
+              <span
+                class="!absolute !-m-px !h-px !w-px !overflow-hidden !whitespace-nowrap !border-0 !p-0 ![clip:rect(0,0,0,0)]"
+                >Loading...</span
+              >
+            </div>
+          </div>
+        </section>
+
     </main>
-  <script src="./js/main.js"></script>
+    <script src="./js/main.js"></script>
 </body>
 
 </html>
