--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body style="font-family: 'Work Sans', sans-serif;" class="overflow-x-hidden">
   <header class="my-5 text-center">
     <h1 class="fs-1 text my-4 fw-semibold text-center ">AI Universe Hub</h1>
-    <button onclick="dateSort()" class="p-2 rounded fw-semibold fs-6 text text-white bg-success">Sort By Date</button>
+    <button onclick="dateSort()" class="p-2 rounded fw-semibold fs-6 text btn  btn-outline-warning">Sort By Date</button>
   </header>
   <main class="container mx-auto mt-5">
     <!-- Cards Container Section  -->
@@ -26,7 +26,7 @@
 
     <!-- Show More Button section -->
     <section class="text-center my-5">
-      <button id="moreButton" class="p-2 rounded fw-semibold fs-6 text text-white bg-success">Show More</button>
+      <button id="moreButton" class="p-2 rounded fw-semibold fs-6 text btn btn-outline-danger">Show More</button>
     </section>
 
     <!-- Modal Section  -->
@@ -35,9 +35,9 @@
         <div class="modal-dialog modal-lg">
           <div class="modal-content">
             <div class="modal-header">
-              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+              <button type="button" class="btn-close btn btn-outline-danger" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
-            <div class="modal-body p-3 d-flex gap-3 flex-column flex-md-row ">
+            <div class="modal-body p-4 d-flex gap-3 flex-column flex-md-row ">
               <div class="card bg-danger bg-opacity-10 border border-danger">
                 <div class="card-body">
                   <h5 id="AiDescription" class="card-title fs-6 text fw-semibold"></h5>
@@ -99,7 +99,6 @@
       </div>
     </div>
   </section>
-
   </main>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
