--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- Fonts Google  -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+  <!-- BootStrap styles -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
   <title>AI Universe</title>
@@ -16,45 +18,49 @@
 <body style="font-family: 'Work Sans', sans-serif;" class="overflow-x-hidden">
   <header class="my-5 text-center">
     <h1 class="fs-1 text my-4 fw-semibold text-center ">AI Universe Hub</h1>
-    <button onclick="dateSort()" class="p-2 rounded fw-semibold fs-6 text btn  btn-outline-warning">Sort By Date</button>
+    <button onclick="dateSort()" class="p-3 rounded-4 fw-semibold fs-6 text btn  btn-danger">Sort By Date</button>
   </header>
   <main class="container mx-auto mt-5">
     <!-- Cards Container Section  -->
-    <section id="cards-container" class=" row row-cols-1 row-cols-md-3 g-4">
 
+    <section id="cards-container" class=" row row-cols-1 row-cols-md-3 g-4">
     </section>
 
     <!-- Show More Button section -->
+
     <section class="text-center my-5">
-      <button id="moreButton" class="p-2 rounded fw-semibold fs-6 text btn btn-outline-danger">Show More</button>
+      <button id="moreButton" class="p-2 rounded-4 fw-semibold fs-6 text btn btn-outline-danger">Show More</button>
     </section>
 
     <!-- Modal Section  -->
+
     <section>
       <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-lg">
           <div class="modal-content">
             <div class="modal-header">
-              <button type="button" class="btn-close btn btn-outline-danger" data-bs-dismiss="modal" aria-label="Close"></button>
+              <button type="button" class="btn-close btn btn-outline-danger" data-bs-dismiss="modal"
+                aria-label="Close"></button>
             </div>
             <div class="modal-body p-4 d-flex gap-3 flex-column flex-md-row ">
               <div class="card bg-danger bg-opacity-10 border border-danger">
                 <div class="card-body">
                   <h5 id="AiDescription" class="card-title fs-6 text fw-semibold"></h5>
-                    <div class="d-flex flex-column flex-md-row justify-content-around align-items-center gap-1 ms-0 me-0 container mx-auto">
-                      <div class="btn btn-light px-2 py-1 text-danger">
-                        <p class="text-success fw-semibold" id="BasicPlan"></p>
-                        <p class="text-success fw-semibold" id="BasicPrice"></p>
-                      </div>
-                      <div class="btn btn-light px-2 py-1 text-danger">
-                        <p class="text-warning fw-semibold" id="ProPlan"></p>
-                        <p class="text-warning fw-semibold" id="ProPrice"></p>
-                      </div>
-                      <div class="btn btn-light px-2 py-1 text-danger ">
-                        <p class="text-danger fw-semibold" id="EnterprisePlan"></p>
-                        <p class="text-danger fw-semibold" id="EnterprisePrice"></p>
-                      </div>
+                  <div
+                    class="d-flex flex-column flex-md-row justify-content-around align-items-center gap-1 ms-0 me-0 container mx-auto">
+                    <div class="btn btn-light px-2 py-1 text-danger">
+                      <p class="text-success fw-semibold" id="BasicPlan"></p>
+                      <p class="text-success fw-semibold" id="BasicPrice"></p>
                     </div>
+                    <div class="btn btn-light px-2 py-1 text-danger">
+                      <p class="text-warning fw-semibold" id="ProPlan"></p>
+                      <p class="text-warning fw-semibold" id="ProPrice"></p>
+                    </div>
+                    <div class="btn btn-light px-2 py-1 text-danger ">
+                      <p class="text-danger fw-semibold" id="EnterprisePlan"></p>
+                      <p class="text-danger fw-semibold" id="EnterprisePrice"></p>
+                    </div>
+                  </div>
                 </div>
                 <div class="d-flex flex-column flex-md-row ps-2">
                   <div>
@@ -78,7 +84,8 @@
               <div class="card p-2 container mx-auto">
                 <div class="position-relative">
                   <img id="AiImage" class="card-img-top " alt="">
-                  <button id="accuracyButton" class="position-absolute top-2 end-0 bg-danger text-white rounded fw-semibold "><span
+                  <button id="accuracyButton"
+                    class="position-absolute top-2 end-0 bg-danger text-white rounded fw-semibold "><span
                       id="accuracy"></span>% Accuracy</button>
                 </div>
                 <div class="card-body p-2">
@@ -92,17 +99,21 @@
       </div>
     </section>
     <!-- Loading Spinner Section  -->
-  <section>
-    <div id="loadingSpinner" class="d-flex justify-content-center align-items-center d-none">
-      <div class="spinner-border" role="status">
-        <span class="visually-hidden">Loading...</span>
+
+    <section>
+      <div id="loadingSpinner" class="d-flex justify-content-center align-items-center d-none">
+        <div class="spinner-border" role="status">
+          <span class="visually-hidden">Loading...</span>
+        </div>
       </div>
-    </div>
-  </section>
+    </section>
+    <!-- Main Section Finished -->
   </main>
+  <!-- BootStrap JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
     crossorigin="anonymous"></script>
+  <!-- Main Js Link    -->
   <script src="./js/main.js"></script>
 </body>
 
