--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body style="font-family: 'Work Sans', sans-serif;" class="overflow-x-hidden">
   <header class="my-5 text-center">
     <h1 class="fs-1 text my-4 fw-semibold text-center ">AI Universe Hub</h1>
-    <button onclick="dateSort()" class="p-3 rounded-4 fw-semibold fs-6 text btn  btn-danger">Sort By Date</button>
+    <button id="btn-sort" class="p-3 rounded-4 fw-semibold fs-6 text btn  btn-danger">Sort By Date</button>
   </header>
   <main class="container mx-auto mt-5">
     <!-- Cards Container Section  -->
