--- a/index.html
+++ b/index.html
@@ -14,13 +14,24 @@
     integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
   <title>AI Universe</title>
 </head>
-
 <body style="font-family: 'Work Sans', sans-serif;" class="overflow-x-hidden">
+  <!-- Header  -->
   <header class="my-5 text-center">
     <h1 class="fs-1 text my-4 fw-semibold text-center ">AI Universe Hub</h1>
-    <button id="btn-sort" class="p-3 rounded-4 fw-semibold fs-6 text btn  btn-danger">Sort By Date</button>
+    <button onclick="sortDates()" class="p-3 rounded-4 fw-semibold fs-6 text btn  btn-danger">Sort By Date</button>
   </header>
+  <!-- Main Start  -->
   <main class="container mx-auto mt-5">
+      <!-- Loading Spinner Section  -->
+
+      <section>
+        <div id="loadingSpinner" class="d-flex justify-content-center align-items-center d-none">
+          <div class="spinner-border" role="status">
+            <span class="visually-hidden">Loading...</span>
+          </div>
+        </div>
+      </section>
+
     <!-- Cards Container Section  -->
 
     <section id="cards-container" class=" row row-cols-1 row-cols-md-3 g-4">
@@ -98,15 +109,7 @@
         </div>
       </div>
     </section>
-    <!-- Loading Spinner Section  -->
-
-    <section>
-      <div id="loadingSpinner" class="d-flex justify-content-center align-items-center d-none">
-        <div class="spinner-border" role="status">
-          <span class="visually-hidden">Loading...</span>
-        </div>
-      </div>
-    </section>
+  
     <!-- Main Section Finished -->
   </main>
   <!-- BootStrap JS -->
