--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <!-- Header  -->
   <header class="my-5 text-center">
     <h1 class="fs-1 text my-4 fw-semibold text-center ">AI Universe Hub</h1>
-    <button onclick="sortDates()" class="p-3 rounded-4 fw-semibold fs-6 text btn  btn-danger">Sort By Date</button>
+    <button id="sortButton" class="p-3 rounded-4 fw-semibold fs-6 text btn  btn-danger">Sort By Date</button>
   </header>
   <!-- Main Start  -->
   <main class="container mx-auto mt-5">
